fix issue with pics on safari

--- a/src/components/products/products.module.css
+++ b/src/components/products/products.module.css
@@ -17,12 +17,6 @@ h4 {
   align-items: center;
   margin-top: 3%;
 }
-.productImage {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  padding: 6px;
-}
 #products {
   display: flex;
   flex-direction: row;
@@ -37,5 +31,5 @@ h4 {
 }
 img {
   max-width: 400px;
-  height: auto;
+  /* max-height: 400px; */
 }
